crates/retiretui/src/commands/tui/snapshots/retiretui__commands__tui__frames__overview_attention_128x32.snap
---
source: crates/retiretui/src/commands/tui/frames.rs
assertion_line: 44
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                              
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                  plan.toml ● 
╯          ╰┴────────┴┴─────────┴┴───────┴┴──────┴──────────────────────────────────────────────────────────────────────────────
 Money lasts                     Success                         Ends with                       Lifetime taxes                 
 Short $772k from 2042           0% of 20                        $32k                            $286k                          
╭ Milestones ──────────────────────────────────────────────────╮╭ Needs attention ─────────────────────────────────────────────╮
│▏ 2045 Medicare · me                                          ││▏ Fails from a 1973 start · 155 of 155 fail                   │
│                                                              ││  2026 k: held to its limit                                   │
│                                                              ││  2042 on: unfunded, $62k a year                              │
│                                                              ││                                                              │
╰──────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────╯
╭ Balances by tax treatment · today's dollars ─────────────────────────────╮╭ 2026 · to do · in that year's dollars ───────────╮
│227k│⠤⠤⠤⠤⢄⣀⣀⣀⣀⣀⡀                                ┊                         ││▏ Contribute $24,500 to k (held to the limit)     │
│    │┊░░░░░░░░░⠈⠉⠉⠑⠒⠒⠤⠤⠤⣀⣀⣀⣀⣀⡀                  ┊                         ││  Withdraw $10,000 from cash                      │
│    │┊░░░░░░░░░░░░░░░░░░░░░░░⠈⠉⠉⠑⠒⠒⠢⠤⠤⢄⣀⣀⣀⣀⣀⣀⡀  ┊                         ││  Withdraw $18,059 from k                         │
│    │┊░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░⢱  ┊                         ││  ! k: contributions were held to a limit this    │
│    │┊░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░⢇ ┊                         ││    year                                          │
│    │┊░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░⠈⡆┊                         ││                                                  │
│    │┊░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░⠸⡀                         ││                                                  │
│    │┊░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░⠑⢄░                       ││                                                  │
│    │┊░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░┊░⠑⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒││                                                  │
│0   │┊░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░┊░░░░░░░░░░░░░░░░░░░░░░░░░││                                                  │
│    └─────────────────────────────────────────────────────────────────────││                                                  │
│ 2026                                2038  retire 2041                2050││                                                  │
│██ HSA  ░░ pre-tax  ▒▒ Roth  ▓▓ taxable                                   ││                                                  │
╰──────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯
╭ Could do better ─────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│▏ No conversion or claim to search                                                                                            │
│                                                                                                                              │
│                                                                                                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ markets  ←→ year  ⇥ pane  v chart  e edit  ctrl-s save  r reload  q quit  ctrl-↓ tab  n dollars           : commands  ? help
